--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
+    "test": "vitest",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "zip": "zip soundtrack-exercise.zip -r README.md index.html package.json package-lock.json public/ src/ .vscode/ .editorconfig .gitignore .prettierrc tsconfig.* vite.config.ts",
@@ -26,6 +27,7 @@
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "typescript": "~5.5.3",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest": "3.0.5"
   }
 }
